fix: :bug: image overflow in search post result fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -555,3 +555,6 @@ z-index: 1050 !important;
     margin-right: 4px !important;
   }
 }
+.hide-image img {
+  display: none !important;
+}
